--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "eslint-config-react-app": "^2.1.0",
     "prettier": "^1.12.1"
   }
 }
