--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-image-fallback": "^7.0.1",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.1"
   },
