--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,27 @@
 {
-    "extends": "react-app",
+    "extends": ["airbnb", "prettier", "prettier/react"],
     "plugins": ["prettier"],
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaVersion": 2016,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "env": {
+        "es6": true,
+        "browser": true,
+        "node": true
+    },
     "rules": {
-      "prettier/prettier": "error"
+        "react/jsx-filename-extension": [1, {
+            "extensions": [".js", ".jsx"]
+        }],
+        "no-case-declarations": "off",
+        "max-len": ["error", {
+            "code": 160,
+            "ignoreUrls": true
+        }]
     }
-  }
-  
+}
