--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,14 @@
     "max-len": ["error", {
       "code": 160,
       "ignoreUrls": true
+    }],
+    "jsx-a11y/anchor-is-valid": ["error", {
+      "components": ["Link"],
+      "specialLink": ["hrefLeft", "hrefRight"],
+      "aspects": ["preferButton"]
+    }],
+    "no-underscore-dangle": ["error", {
+      "allow": ["_id"]
     }]
   }
 }
