--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-image-fallback": "^7.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.1"
   },
